--- a/WonderWhisper Mac/WonderWhisper_Mac.entitlements
+++ b/WonderWhisper Mac/WonderWhisper_Mac.entitlements
@@ -10,5 +10,8 @@
 	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
+	<!-- Needed for AppleScript Automation (System Events keystroke) -->
+	<key>com.apple.security.automation.apple-events</key>
+	<true/>
 </dict>
 </plist>
